--- a/sections/section01.tex
+++ b/sections/section01.tex
@@ -36,11 +36,12 @@
 
 Действие оператора, заданного в некотором базисе $\vec{e}_1, \ldots, \vec{e}_m$ матрицей \eqref{eq:NilpotentBlock}, описывается схемой\footnotemark{} $\vec{e}_1 \mapsto \vec{e}_2 \mapsto \ldots \mapsto \vec{e}_m \mapsto \vec{0}$. Построив указанный в теореме \ref{theorem:NilpotentNormalForm} базис в каждом из корневых подпространств, получим следующее утверждение.
 
-\footnotetext{Здесь мы (вслед за Антоном Александровичем) намеренно изображаем жордановы клетки <<перевёрнутыми>>, нам так будет удобнее. Мы хотим, чтобы первый базисный вектор $\vec{e}_1$ имеет максимальную высоту.}
+\footnotetext{Здесь мы (вслед за Антоном Александровичем) намеренно изображаем жордановы клетки <<перевёрнутыми>>, нам так будет удобнее. Мы хотим, чтобы первый базисный вектор $\vec{e}_1$ имел максимальную высоту.}
 
 \begin{theorem} \label{theorem:JordanNormalForm}
 	Для каждого линейного оператора, характеристический многочлен которого разлагается на линейные множители, можно выбрать базис, в котором его матрица блочно-диагональна с блоками вида
 	\begin{equation} \label{eq:JordanBlock}
+		J_\lambda =
 		\begin{pmatrix}
 			\lambda & & & 0 \\
 			1 & \lambda & & \\
@@ -79,7 +80,7 @@
 \[
 	\rk(A - \lambda E) = \rk\big(C^{-1}(A - \lambda E)C\big) = \rk\big(\underbrace{C^{-1}AC}_{J} - \lambda\underbrace{C^{-1}C}_{E}\big) = \rk(J - \lambda E).
 \]
-(Первое равенство --- это просто равенство рангов подобных матриц.)
+для любого $\lambda$. (Первое равенство --- это просто равенство рангов подобных матриц.)
 
 \begin{lemma}
 	Количество жордановых клеток с собственным значением $\lambda$ размера не меньше $k$ равняется
@@ -91,13 +92,13 @@
 \begin{proof}
 	Пусть $\lambda$ --- единственное собственное значение матрицы $A$. Как мы уже заметили выше, $\rk(A - \lambda E) = \rk(J - \lambda E)$, поэтому можем доказывать то же самое, заменив $A$ на $J$. Рассмотрим часть жордановой матрицы, соответствующей собственному значению $\lambda$. При переходе от матрицы $(J - \lambda E)^{k - 1}$ к $(J - \lambda E)^k$ из всех жордановых клетки, кроме тех, которые уже целиком обнулились, исчезает по единице. В матрице $(J - \lambda E)^{k - 1}$ целиком обнулились клетки размером меньше $k$, поэтому искомая разность есть количество клеток размера не меньше $k$.
 
-	Осталось доказать, почему клетки с другими собственными значениями не влияют на ранг. Иными словами, нужно доказать, что для клетки $J_\lambda$ с $\lambda \ne 0$ размера $m \times m$ для любого $l \in \N$ имеет место равенство $\rk J_\lambda^l = m$. Это сразу следует из предложения $2{.}11{.}1$ из \cite{P24}: для любого многочлена $f$ его значение на жордановой клетке есть
+	Осталось доказать, почему клетки с другими собственными значениями не влияют на ранг. Иными словами, нужно доказать, что для клетки $J_\lambda$ с $\lambda \ne 0$ размера $m \times m$ и для любого $l \in \N$ имеет место равенство $\rk J_\lambda^l = m$. Это сразу следует из предложения $2{.}11{.}1$ из \cite{P24}: для любого многочлена $f$ его значение на жордановой клетке есть
 	\[
 		f(J_\lambda) =
 		\begin{pmatrix}
 			f(\lambda) & & & 0\\
-			\frac{f^\prime(\lambda)}{1!} & \ddots & & \\
-			\vdots & & f(\lambda) & \\
+			\frac{f^\prime(\lambda)}{1!} & f(\lambda) & & \\
+			\vdots & \ddots & \ddots & \\
 			\frac{f^{(n - 1)}(\lambda)}{(n - 1)!} & \ldots & \frac{f^\prime(\lambda)}{1!} & f(\lambda)
 		\end{pmatrix}
 	\]
@@ -122,7 +123,7 @@
 \end{problem}
 
 \begin{solution}
-	Характеристический многочлен имеет вид $\chi_\A(t) = (2 - t)^5$, отсюда имеет единственный корень $\lambda = 2$ кратности $5$. Так что жорданова матрица выглядит так:
+	Характеристический многочлен имеет вид $\chi_\A(t) = (2 - t)^5$, отсюда имеем единственный корень $2$ кратности $5$. Так что жорданова матрица выглядит так:
 	\[
 		\begin{pmatrix}
 			2 & 0 & 0 & 0 & 0\\
@@ -180,11 +181,12 @@
 	\]
 	и пусть $k$ --- номер первого ненулевого коэффициента, т.\,е. можно записывать эту линейную комбинацию, начиная с члена под номером $k$. Тогда
 	\[
-		\mathcal{N}^{m - k - 1}\br{\lambda_k\mathcal{N}^k\vec{v} + \ldots + \lambda_{m - 1}\mathcal{N}^{m - 1}\vec{v}} = \mathcal{N}^{m - 1}\vec{v} \ne \vec{0}.
+		\mathcal{N}^{m - k - 1}\br{\lambda_k\mathcal{N}^k\vec{v} + \ldots + \lambda_{m - 1}\mathcal{N}^{m - 1}\vec{v}} = \mathcal{N}^{m - 1}\vec{v} \ne \vec{0},
 	\]
+	а нулевой вектор всегда переходит в нулевой под действием линейного оператора.
 \end{proof}
 
-Таким образом, если мы хотим выбрать базис подпространства, соответствующего некоторой жордановой клетке $J_\lambda$ размера $m \times m$, то нам достаточно выбрать вектор высоты $m$ для нильпотентного оператора $\A - \lambda\id$. (Или, что то же самое, корневой вектор оператора $\A$, отвечающий собственному значению $\lambda$, высоты $m$.) Для простоты изложения, здесь мы разберём несколько случаев --- от простого к сложному.
+Таким образом, если мы хотим выбрать базис подпространства, соответствующего некоторой жордановой клетке $J_\lambda$ размера $m \times m$, то нам достаточно выбрать вектор высоты $m$ для нильпотентного оператора $\A - \lambda\id$. Для простоты изложения, здесь мы разберём несколько случаев --- от простого к сложному.
 
 \medskip
 \noindent{\large\bfseries \rnum{1}. В жордановой форме только одна клетка}
@@ -349,13 +351,13 @@
 	На этот раз\footnotemark{} вектор подошёл, и мы нашли базис целиком.
 \end{solution}
 
-\footnotetext{Если выбирать вектор на самом деле случайно, то не везёт очень редко, особенно над бесконечными полями. В решении задачи первый вектор был специально выбран плохим.}
+\footnotetext{Если выбирать вектор на самом деле случайно, то не везёт очень редко, особенно над бесконечными полями. В решении задачи первый вектор был намеренно выбран плохим.}
 
 \medskip
 \noindent{\large\bfseries \rnum{2}. В жордановой форме несколько клеток одного размера}
 \smallskip
 
-Теперь нужно повторить процесс из предыдущего пункта несколько раз (по разу для каждой клетки) и потом проверить линейную независимость полученных векторов. Мы утверждаем, что достаточно проверять линейную независимость только собственных векторов. Мы докажем это для базисов, соответствующих двум жордановым клеткам, но доказательство в общем случае аналогично.
+Теперь нужно повторить процесс из предыдущего пункта несколько раз (по разу для каждой клетки) и потом проверить линейную независимость полученных векторов. Мы утверждаем, что достаточно проверять линейную независимость только собственных векторов. Мы докажем это для базисов, соответствующих двум жордановым клеткам, но доказательство в общем случае проводится аналогично.
 
 \begin{lemma}
 	Имеется вектор $\vec{v}$ высоты $m$ и вектор $\vec{u}$ высоты $k$ для нильпотентного оператора $\mathcal{N}$. Система векторов $\vec{v},\,\mathcal{N}\vec{v},\,\ldots,\,\mathcal{N}^{m - 1}\vec{v},\,\vec{u},\,\mathcal{N}\vec{u},\,\ldots,\,\mathcal{N}^{k - 1}\vec{u}$ линейно независима тогда и только тогда, когда линейно независимы собственные векторы $\mathcal{N}^{m - 1}\vec{v}$ и $\mathcal{N}^{k - 1}\vec{u}$.
@@ -375,7 +377,7 @@
 		\lambda_0\vec{v} + \lambda_1\mathcal{N}\vec{v} + \ldots + \lambda_{m - 1}\mathcal{N}^{m - 1}\vec{v} + \mu_0\vec{u} + \mu_1\mathcal{N}\vec{u} + \ldots + \mu_{m - 1}\mathcal{N}^{m - 1}\vec{u} = \vec{0}.
 	\]
 
-	Возьмём оператор $\mathcal{N}^{m - 1}$ от обеих частей, получим $\lambda_0\mathcal{N}^{m - 1}\vec{v} + \mu_0\mathcal{N}^{m - 1}\vec{u} = \vec{0}$. Про векторы $\mathcal{N}^{m - 1}\vec{v}$ и $\mathcal{N}^{m - 1}\vec{u}$ мы знаем, что они линейно независимы, поэтому $\lambda_0 = \mu_0 = 0$. Теперь берём оператор $\mathcal{N}^{m - 2}$ от обеих частей и так же получаем $\lambda_1 = \mu_1 = 0$. Аналогично доказываем, что все коэффициенты данной линейной зависимости нулевые, то есть она тривиальна.
+	Возьмём оператор $\mathcal{N}^{m - 1}$ от обеих частей, получим $\lambda_0\mathcal{N}^{m - 1}\vec{v} + \mu_0\mathcal{N}^{m - 1}\vec{u} = \vec{0}$. Про векторы $\mathcal{N}^{m - 1}\vec{v}$ и $\mathcal{N}^{m - 1}\vec{u}$ мы знаем, что они линейно независимы, поэтому $\lambda_0 = \mu_0 = 0$. Теперь берём оператор $\mathcal{N}^{m - 2}$ от обеих частей и так же получаем $\lambda_1 = \mu_1 = 0$. Так же доказываем, что все коэффициенты линейной зависимости нулевые, то есть она тривиальна.
 \end{proof}
 
 Таким образом, когда мы нашли куски жорданова базиса, соответствующие разным клеткам, нам достаточно проверить линейную независимость последних (собственных) векторов каждого куска.
@@ -405,7 +407,7 @@
 		\end{pmatrix} = 2,\qquad \rk(A - 3E)^2 = 0
 	\end{gather*}
 
-	Таким образом, у нас $2 - 0 = 2$ клеток размера хотя бы $2$, отсюда сразу можно сделать вывод, что у нас две клетки размера $2 \times 2$, то есть жорданова форма имеет вид
+	Таким образом, у нас $2 - 0 = 2$ клетки размера хотя бы $2$, отсюда сразу можно сделать вывод, что имеется ровно две клетки размера $2 \times 2$, то есть жорданова форма имеет вид
 	\[
 		J =
 		\begin{pmatrix}
@@ -481,11 +483,11 @@
 \noindent{\large\bfseries \rnum{3}. Есть клетки разных размеров с одним собственным значением}
 \smallskip
 
-Упорядочим клетки по размерам: $m_1 > m_2 > \ldots > m_l$. Для самой большой клетки (размера $m_1$) делаем всё, как обычно. Для меньшей клетки размера $m_2$ нужно найти вектор высоты $m_2$ для оператора $\A - \lambda\id$, но который не выражается через вектор высоты $m_2 < m_1$, который получился в процессе выбора базиса для предыдущей клетки. Для этого нам придётся выписать решения системы линейных уравнений
+Упорядочим клетки по размерам: $m_1 > m_2 > \ldots > m_l$. Для самой большой клетки (размера $m_1$) делаем всё, как обычно. Для меньшей клетки размера $m_2$ нужно найти вектор высоты $m_2$ для оператора $\A - \lambda\id$, но который не выражается через вектор высоты $m_2 \hm< m_1$, который получился в процессе выбора базиса для предыдущей клетки. Для этого нам придётся выписать решения системы линейных уравнений
 \[
 	(A - \lambda E)^{m_2}X = \vec{0}
 \]
-и выбрать среди них вектор, линейно независимый с векторами высоты, меньшей $m_2$, из уже полученного куска базиса. Для этого можно, опять же, взять случайный вектор (по тем же причинам, что и раньше).
+и выбрать среди них вектор, линейно независимый с векторами высоты, меньшей $m_2$, из уже полученного куска базиса. Для этого можно, опять же, взять \underline{случайный} вектор из подпространства решений этой системы (по тем же причинам, что и раньше).
 
 Так повторяем для всех клеток, а потом обязательно проверяем линейную независимость полученных собственных векторов. Здесь, опять же, если нам где-то не повезло с выбором случайного вектора, мы это обязательно заметим --- вектора в конце получатся линейно зависимыми.
 
@@ -657,9 +659,9 @@
 
 Пусть нас интересует собственное значение $\lambda$. Сначала выберем какой-то аннулирующий многочлен $f$ для оператора $\A$ (например, минимальный многочлен $\mu_\A$) и какой-то случайный вектор $\vec{v}$. А теперь подействуем на наш случайный вектор оператором
 \[
-	\vec{u} = \left.\frac{f(t)}{(t - \lambda)^k}\right|_\A,
+	\left.\frac{f(t)}{(t - \lambda)^k}\right|_\A,
 \]
-где $k$ --- кратность $\lambda$ как корня многочлена $f$. Таким образом мы получим желаемый случайный корневой вектор, соответствующий собственному значению $\lambda$. Действительно,
+где $k$ --- кратность $\lambda$ как корня многочлена $f$. Таким образом мы получим желаемый случайный корневой вектор $\vec{u}$, отвечающий собственному значению $\lambda$. Действительно,
 \[
 	(\A - \lambda\id)^k\vec{u} = \left.(t - \lambda)^k\right|_\A\left.\frac{f(t)}{(t - \lambda)^k}\right|_\A\vec{v} = f(\A)\vec{v} = \vec{0},
 \]
@@ -668,9 +670,9 @@
 \begin{proposition}
 	Если характеристический многочлен оператора $\A$ раскладывается на линейные множители, то минимальный аннулирующий многочлен этого оператора есть
 	\[
-		\prod_{i = 1}^k(t - \lambda_i)^{m_i},
+		\prod_{i = 1}^r(t - \lambda_i)^{m_i},
 	\]
-	где $\lambda_1, \ldots, \lambda_k$ --- все собственные значения оператора $\A$, а $m_i$ --- размер максимальной жордановой клетки, отвечающей собственному значению $\lambda_i$.
+	где $\lambda_1, \ldots, \lambda_r$ --- все собственные значения оператора $\A$, а $m_i$ --- размер максимальной жордановой клетки, отвечающей собственному значению $\lambda_i$.
 \end{proposition}
 
 \begin{problem}
