Amount of eigenvectors

--- a/sections/section01.tex
+++ b/sections/section01.tex
@@ -106,6 +106,10 @@
 	Нас интересуют многочлены вида $f(t) = t^l$. Если $\lambda \ne 0$, то $f(\lambda) = \lambda^l \ne 0$ (в поле нет делителей нуля). Тогда матрица $J_\lambda^l$ треугольная, с ненулевыми числами на диагонали, значит, её ранг равен её размеру. Осталось упомянуть, что многочлен от блочной матрицы (нас интересует жорданова форма оператора) применяется к ней поблочно. Отсюда и следует желаемое.
 \end{proof}
 
+\begin{corollary}
+	Количество собственных векторов оператора $\A$, соответствующих собственному значению $\lambda$, равняется в точности $n - \rk(\A - \lambda E)$.
+\end{corollary}
+
 С помощью этой леммы, для каждого $k$ находим количество жордановых клеток размера $k$ как количество клеток размера не меньше $k$ за вычетом клеток размера не меньше $k + 1$. Повторить для каждого собственного значения.
 
 \begin{problem}
