--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 \begin{abstract}
 	Здесь собраны мои записки по линейной алгебре. Это не конспект лекций, а скорее справочник по наиболее практически важным темам (идеям, методам, \ldots) курса и техникам, которые позволяют эффективно решать рутинные задачи.
 
-	Я учил линейную алгебру по курсу Т.\,Е. Панова, он изложен в книге \cite{P24}. Из книг \cite{NT14} и \cite{A24} позаимствованы некоторые важные применения линейной алгебры к другим дисциплинам --- дифференциальной геометрии и дифференциальным уравнениям, соответственно. Для лучшего понимания линейной алгебры именно с практической точки зрения рекомендую почитать \href{http://halgebra.math.msu.su/wiki/doku.php/klyachko-v24}{файлы А.\,А. Клячко}.
+	Большая часть используемого теоретического материала содержится в книгах \cite{P24} и \cite{V24}. Из книг \cite{NT14} и \cite{A24} позаимствованы некоторые важные применения линейной алгебры к другим дисциплинам --- дифференциальной геометрии и дифференциальным уравнениям, соответственно.
 
 	\input{./literature.tex}
 \end{abstract}
@@ -19,6 +19,7 @@
 \tableofcontents
 
 \include{./sections/section01.tex}
+\include{./sections/section02.tex}
 
 \end{document}
 
