--- a/preamble.sty
+++ b/preamble.sty
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
 \usepackage{amssymb, amsmath, amsthm, mathtools}
+\usepackage{microtype}
 
 % Настройки шрифта
 \usepackage{fontspec}
@@ -101,6 +102,7 @@
 \newcommand{\conv}{\operatorname{conv}}
 \newcommand{\proj}{\operatorname{proj}}
 \renewcommand{\span}{\operatorname{span}}
+\newcommand{\grad}{\operatorname{grad}}
 \newcommand{\ds}{\displaystyle}
 \newcommand{\bs}[1]{\boldsymbol{#1}}
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
