--- a/sections/section01.tex
+++ b/sections/section01.tex
@@ -1,5 +1,7 @@
 \section{Жорданова нормальная форма}
 
+\subsection{Теоретические сведения}
+
 Наша глобальная цель --- научиться приводить матрицы к <<хорошему>> виду. Некоторые операторы можно диагонализировать, но не все. Ясно, что для этого необходимо и достаточно уметь выбирать базис из собственных векторов. Существование такого базиса равносильно выполнению следующих двух условий:
 
 \begin{enumerate}[nolistsep, label=(\arabic*)]
@@ -56,6 +58,8 @@
 	Вид оператора, указанный в теореме \ref{theorem:JordanNormalForm}, называется \textit{жордановой нормальной формой} оператора, а блоки вида \eqref{eq:JordanBlock} --- \textit{жордановыми клетками}. Базис, в котором оператор имеет интересующий нас вид, также называется \textit{жордановым}.
 \end{definition}
 
+\subsection{Нахождение жордановой формы оператора}
+
 Чтобы найти жорданову форму оператора $\A$, сначала находим характеристический многочлен $\chi_\A(t)$ и выписываем его корни $\lambda_1, \ldots, \lambda_r$ и их кратности $k_1, \ldots, k_r$. На диагонали в жордановой форме стоят собственные значения:
 
 \vspace{5mm}
@@ -92,7 +96,7 @@
 \begin{proof}
 	Пусть $\lambda$ --- единственное собственное значение матрицы $A$. Как мы уже заметили выше, $\rk(A - \lambda E) = \rk(J - \lambda E)$, поэтому можем доказывать то же самое, заменив $A$ на $J$. Рассмотрим часть жордановой матрицы, соответствующей собственному значению $\lambda$. При переходе от матрицы $(J - \lambda E)^{k - 1}$ к $(J - \lambda E)^k$ из всех жордановых клетки, кроме тех, которые уже целиком обнулились, исчезает по единице. В матрице $(J - \lambda E)^{k - 1}$ целиком обнулились клетки размером меньше $k$, поэтому искомая разность есть количество клеток размера не меньше $k$.
 
-	Осталось доказать, почему клетки с другими собственными значениями не влияют на ранг. Иными словами, нужно доказать, что для клетки $J_\lambda$ с $\lambda \ne 0$ размера $m \times m$ и для любого $l \in \N$ имеет место равенство $\rk J_\lambda^l = m$. Это сразу следует из предложения $2{.}11{.}1$ из \cite{P24}: для любого многочлена $f$ его значение на жордановой клетке есть
+	Осталось доказать, почему клетки с другими собственными значениями не влияют на ранг. Иными словами, нужно доказать, что для клетки $J_\lambda$ с $\lambda \ne 0$ размера $m \times m$ и для любого $k \in \N$ имеет место равенство $\rk J_\lambda^k = m$. Это сразу следует из предложения $2{.}11{.}1$ из \cite{P24}: для любого многочлена $f$ его значение на жордановой клетке есть
 	\[
 		f(J_\lambda) =
 		\begin{pmatrix}
@@ -103,14 +107,14 @@
 		\end{pmatrix}
 	\]
 
-	Нас интересуют многочлены вида $f(t) = t^l$. Если $\lambda \ne 0$, то $f(\lambda) = \lambda^l \ne 0$ (в поле нет делителей нуля). Тогда матрица $J_\lambda^l$ треугольная, с ненулевыми числами на диагонали, значит, её ранг равен её размеру. Осталось упомянуть, что многочлен от блочной матрицы (нас интересует жорданова форма оператора) применяется к ней поблочно. Отсюда и следует желаемое.
+	Нас интересуют многочлены вида $f(t) = t^k$. Если $\lambda \ne 0$, то $f(\lambda) = \lambda^k \ne 0$ (в поле нет делителей нуля). Тогда матрица $J_\lambda^k$ треугольная, с ненулевыми числами на диагонали, значит, её ранг равен её размеру. Осталось упомянуть, что многочлен от блочно-диагональной матрицы (нас интересует матрица $J - \lambda E$) применяется к ней поблочно. Отсюда и получается, что клетки, отвечающие другим собственным значениям (кроме $\lambda$) при возведении в степень матрицы $J - \lambda E$ не влияют на ранг.
 \end{proof}
 
 \begin{corollary}
-	Количество собственных векторов оператора $\A$, соответствующих собственному значению $\lambda$, равняется в точности $n - \rk(\A - \lambda E)$.
+	Количество собственных векторов оператора $\A$, соответствующих собственному значению $\lambda$, равняется в точности $n - \rk(\A - \lambda\id)$.
 \end{corollary}
 
-С помощью этой леммы, для каждого $k$ находим количество жордановых клеток размера $k$ как количество клеток размера не меньше $k$ за вычетом клеток размера не меньше $k + 1$. Повторить для каждого собственного значения.
+С помощью этой леммы для каждого $k$ находим количество жордановых клеток размера $k$ как количество клеток размера не меньше $k$ за вычетом клеток размера не меньше $k + 1$. Повторить для каждого собственного значения.
 
 \begin{problem}
 	Найти жорданову форму для оператора $\A$, матрица которого в стандартном базисе имеет вид
@@ -192,9 +196,10 @@
 
 Таким образом, если мы хотим выбрать базис подпространства, соответствующего некоторой жордановой клетке $J_\lambda$ размера $m \times m$, то нам достаточно выбрать вектор высоты $m$ для нильпотентного оператора $\A - \lambda\id$. Для простоты изложения, здесь мы разберём несколько случаев --- от простого к сложному.
 
-\medskip
-\noindent{\large\bfseries \rnum{1}. В жордановой форме только одна клетка}
-\smallskip
+\subsection{В жордановой форме только одна клетка}
+%\medskip
+%\noindent{\large\bfseries \rnum{1}. В жордановой форме только одна клетка}
+%\smallskip
 
 \[
 	J =
@@ -357,9 +362,10 @@
 
 \footnotetext{Если выбирать вектор на самом деле случайно, то не везёт очень редко, особенно над бесконечными полями. В решении задачи первый вектор был намеренно выбран плохим.}
 
-\medskip
-\noindent{\large\bfseries \rnum{2}. В жордановой форме несколько клеток одного размера}
-\smallskip
+\subsection{В жордановой форме несколько клеток одного размера}
+%\medskip
+%\noindent{\large\bfseries \rnum{2}. В жордановой форме несколько клеток одного размера}
+%\smallskip
 
 Теперь нужно повторить процесс из предыдущего пункта несколько раз (по разу для каждой клетки) и потом проверить линейную независимость полученных векторов. Мы утверждаем, что достаточно проверять линейную независимость только собственных векторов. Мы докажем это для базисов, соответствующих двум жордановым клеткам, но доказательство в общем случае проводится аналогично.
 
@@ -483,9 +489,10 @@
 	Собственные векторы $\vec{e}^\prime_2$ и $\vec{e}^\prime_4$, очевидно, линейно независимы, так что построенная нами система действительно является жордановым базисом для данного оператора.
 \end{solution}
 
-\medskip
-\noindent{\large\bfseries \rnum{3}. Есть клетки разных размеров с одним собственным значением}
-\smallskip
+\subsection{Есть клетки разных размеров с одним собственным значением}
+%\medskip
+%\noindent{\large\bfseries \rnum{3}. Есть клетки разных размеров с одним собственным значением}
+%\smallskip
 
 Упорядочим клетки по размерам: $m_1 > m_2 > \ldots > m_l$. Для самой большой клетки (размера $m_1$) делаем всё, как обычно. Для меньшей клетки размера $m_2$ нужно найти вектор высоты $m_2$ для оператора $\A - \lambda\id$, но который не выражается через вектор высоты $m_2 \hm< m_1$, который получился в процессе выбора базиса для предыдущей клетки. Для этого нам придётся выписать решения системы линейных уравнений
 \[
@@ -655,9 +662,10 @@
 	Векторы $\vec{e}^\prime_3$ и $\vec{e}^\prime_5$, очевидно, линейно независимы, так что векторы $\vec{e}^\prime_1$, $\vec{e}^\prime_2$, $\vec{e}^\prime_3$, $\vec{e}^\prime_4$, $\vec{e}^\prime_5$ действительно образуют жорданов базис.
 \end{solution}
 
-\medskip
-\noindent{\large\bfseries \rnum{4}. Есть клетки с разными собственными значениями}
-\smallskip
+\subsection{Есть клетки с разными собственными значениями}
+%\medskip
+%\noindent{\large\bfseries \rnum{4}. Есть клетки с разными собственными значениями}
+%\smallskip
 
 Здесь мы, наконец, рассматриваем максимально общий случай. В этом месте возникает важный момент --- теперь всё пространство не является корневым для определённого собственного значения. Как же нам теперь найти случайный \underline{корневой} вектор?
 
@@ -876,6 +884,6 @@
 		\end{pmatrix}.
 	\]
 
-	Линейную независимость $\vec{e}^\prime_5$ ни с кем проверять уже не надо, он лежит в своём корневом подпространстве (вспомнить теорему о разложении пространства в прямую сумму корневых подпространств).
+	Линейную независимость $\vec{e}^\prime_5$ ни с кем проверять уже не надо, он лежит в своём корневом подпространстве.
 \end{solution}
 
